--- a/src/Styles/Header.css
+++ b/src/Styles/Header.css
@@ -84,3 +84,14 @@
       height: 20px;
     }
   } */
+ .discussion-icon {
+  height: 45px;
+  width:35px;
+  margin-top: 10px;
+ } 
+ .discussion-button{
+  background: none;
+  border: none;
+  cursor: pointer;
+  float: right;
+ }
